--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "typescript-storybook-component-library-template",
+  "name": "appcharge-checkout",
   "version": "1.0.0",
-  "repository": "git@github.com:seeratawan01/Typescript-React-Storybook-Library-Starter.git",
-  "author": "Seerat Awan <seeratawan01@users.noreply.github.com>",
+  "author": "Appcharge inc <nirtz-appcharge@users.noreply.github.com>",
   "license": "MIT",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
@@ -40,7 +39,7 @@
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "jest": "^27.2.2",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.27",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
